--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 {% assign posts_count = paginator.posts | size %}
 
 <div class="home">
+  <h2>{{ site.text.main_header }}</h2>
   {% if posts_count > 0 %}
     <div class="posts">
       {% for post in paginator.posts %}
